trying to push my local directory onto git

--- a/gameserver/js/index.html
+++ b/gameserver/js/index.html
@@ -20,10 +20,21 @@
             var types = [];
             var numObjects = 0;
             var newInput = 0;
+            var clientId = -1;
+            var piecesInitialized = 0;
+            var message = '';
 
             onload = init;
 
             function init() {
+                socket.emit('assign me id');
+                socket.on('assign id to html',function(newid) {
+                if(clientId == -1)
+                { 
+                   clientId = parseInt(newid,10);
+                   socket.emit('output id',clientId.toString());
+                }
+            });
                 canvas = oCanvas.create({
                     canvas: "#myCanvas"
                 });
@@ -70,6 +81,7 @@
                 canvas.addChild(rectangle);
             }
 
+            var temp_x;
             function inputLoop() {
                 if(canvas.mouse.buttonState=="up"&&md==1){
                     md=0;
@@ -86,36 +98,47 @@
                 }
                 if(newInput == 1){
                     newInput = 0;
+                    message = '';
                     message = md + ' ' + mx + ' ' + my;
-                    socket.emit('mouse input', message);
+                    socket.emit('mouse input', clientId.toString() + ' ' + message);
                 }
             }
 
             socket.on('num pieces', function(msg){
-                initObjects(+msg);
+                if(piecesInitialized == 0)
+                {
+                    initObjects(+msg);
+                    piecesInitialized = 1;
+                }
             });
 
+            
             socket.on('draw pieces', function(msg){
                 rect=msg.split(/[ ,]+/);
+                //check id before u do any draws
                 for(var i=0;i<numObjects;i++) {
-                    if(+rect[i*5]==0){//0 is player piece type
-                        objects[i].fill="#707";
-                    }
-                    else{
-                        objects[i].fill="#077";
-                    }
-                    objects[i].x = +rect[i*5+1];
-                    objects[i].y = +rect[i*5+2];
-                    objects[i].width = +rect[i*5+3];
-                    objects[i].height = +rect[i*5+4];
-                    if(objects[i].width == 0){
-                        objects[i].stroke="0px";
-                    }
-                    else{
-                        objects[i].stroke="inside 1px rgba(220, 220, 220, 1)";
+                    if(+rect[i*6]==clientId){
+                        if(+rect[i*6+1]==0){//1 is player piece type
+                            objects[i].fill="#707";
+                        }
+                        else{
+                            objects[i].fill="#077";
+                        }
+                        objects[i].x = +rect[i*6+2];
+                        objects[i].y = +rect[i*6+3];
+                        objects[i].width = +rect[i*6+4];
+                        objects[i].height = +rect[i*6+5];
+                        if(objects[i].width == 0){
+                            objects[i].stroke="0px";
+                        }
+                        else{
+                            objects[i].stroke="inside 1px rgba(220, 220, 220, 1)";
+                        }
                     }
                 }
             });
+
+
         </script>
     </head>
     <body>
